feat: endpoint to check answer
