# src/genericFunctions/genericFunctions.dto.ts
@@ -1,0 +1,4 @@
+export interface checkAnswerDTO {
+  answer: string;
+  clueId: number;
+}
